[package]
name = "kevlar-laces"
version = "0.1.0"
authors = ["Rusell Mull <rmull@polysync.io>"]

[dependencies]
git-rsl = { git = "ssh://git@github.com/PolySync/git-rsl.git" }
git2 = { git = "https://github.com/alexcrichton/git2-rs", commit="2a53469b0db9a01ae3894d3925518c776eccc34a"}
error-chain = "0.11.0"

[[bin]]
name = "git-merge-pr"
path = "src/git-merge-pr.rs"

[[bin]]
name = "git-promote"
path = "src/git-promote.rs"
