[package]
name = "kevlar-laces"
version = "0.1.0"
authors = ["Rusell Mull <rmull@polysync.io>"]

[dependencies]
git-rsl = { git = "ssh://git@github.com/PolySync/git-rsl.git", branch="changes_for_external_commands" }
git2 = { git = "https://github.com/alexcrichton/git2-rs", branch="master" }
error-chain = "0.11.0"
structopt = "0.2"

[dev-dependencies]
assert_cli = "0.6.1"
tempfile = "3.0.2"
libc = "0.2.42"
lazy_static = "1.0"

[[bin]]
name = "git-merge-pr"
path = "src/git-merge-pr.rs"

[[bin]]
name = "git-promote"
path = "src/git-promote.rs"